# acousticbrainz-gui

./: CMakeLists.txt  README.md  acousticbrainz-gui.desktop  analyzefiletask.cpp  analyzefiletask.h  constants.h  extractor.cpp  extractor.h  extractor.qrc  extractor.rc  gzip.cpp  loadfilelisttask.cpp  mac-notes.txt  main.cpp  mainwindow.cpp  mainwindow.h  progressdialog.cpp  progressdialog.h  utils.cpp  utils.h
extractor/: README.txt
